# Lead-Scraper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.agent/: available_skills.json
.agent/skills/: audit-website  brainstorming  find-skills  framer-motion-animator  frontend-design  humanize-code  humanizer  kanban_task_planner  onboarding-cro  planning-with-files  session-handoff  skill-creator  supabase-postgres-best-practices  tavily-research  vercel-react-best-practices
.omni_code/skills/: SCHEMA.md
.omni_code/skills/acquire-no-website-leads/: SKILL.md
agents/rgv_lead_scraper/: .env.example  README.md  __init__.py  agent.yml  context.py  instructions.md
config/: config.json
plan/: SKILL-LIST.md  board.md  findings.md  p26_live_verification_results.md  p26_static_audit.md  progress.md  safety-rails-audit.md  session-api-surface.md  task_plan.md
plan/p14_evidence/: prompt1.jsonl  prompt2.jsonl  prompt3.jsonl  prompt4.jsonl  prompt4_expand.jsonl  run_prompt.py  run_prompt2.py
plan/p14b_evidence/: run_test_alwaysapprove.py  run_tests.py  summary.json  t1_get_settings_summary.jsonl  t2_read_file.jsonl  t3_list_directory.jsonl  t4_run_pipeline_gates.jsonl  t5_always_approve.jsonl  t5b_always_approve_single_run.jsonl
plan/p14c_evidence/: probe_ws.py
scripts/: com.worklogicly.lead-agent.plist  install-launchd.sh  run-agent.sh  uninstall-launchd.sh
src/lead_scraper/: models.py  pipeline.py
src/lead_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_connection_provider.py  test_export.py  test_failure_modes.py  test_hosted_integration.py  test_lead_quality_scorer.py  test_local_provider.py  test_maps_serpapi.py  test_output_contract.py  test_token_store.py  test_ws_auth.py
(+41 files in other folders)
