[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-scraper"
version = "0.1.0"
description = "AI-powered RGV lead scraping agent scaffold (OmniAgents)"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name = "Lead-Scraper"}]
dependencies = [
  "omniagents[all]>=0.6.31",
  "python-dotenv>=1.0.0",
]

[project.scripts]
lead-scraper = "lead_scraper.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
